--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -28,9 +28,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.GenderName"></label>
-                <input asp-for="Input.GenderName" class="form-control" />
+                <select asp-for="Input.GenderName" class="form-control">
+                    <option value="">Выберите пол</option>
+                    <option value="мужской">мужской</option>
+                    <option value="женский">женский</option>
+                </select>
                 <span asp-validation-for="Input.GenderName" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Input.DataBirth"></label>
                 <input asp-for="Input.DataBirth" type="date" class="form-control" />
@@ -61,10 +66,10 @@
                 <input asp-for="Input.Polisy" class="form-control" />
                 <span asp-validation-for="Input.Polisy" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
+            @*<div class="form-floating mb-3">
                 <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
                 <label asp-for="Username" class="form-label">Имя пользователя</label>
-            </div>
+            </div>*@
             <div class="form-floating mb-3">
                 <input asp-for="Input.Phone" class="form-control" placeholder="Please enter your phone number." />
                 <label asp-for="Input.Phone" class="form-label"></label>
