--- a/Views/Polyclinics/Index.cshtml
+++ b/Views/Polyclinics/Index.cshtml
@@ -4,13 +4,32 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<style>
+    .table-striped > tbody > tr:nth-of-type(odd) {
+        background-color: #f7f7f7;
+    }
+
+    .table-dark {
+        color: #fff;
+        background-color: #343a40;
+        border-color: #454d55;
+    }
+
+        .table-dark th,
+        .table-dark td,
+        .table-dark thead th {
+            border-color: #454d55;
+        }
+</style>
+
+<h1>Поликлинический прием</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create"><i class="bi bi-plus-circle"></i> Создать новое</a>
 </p>
-<table class="table">
-    <thead>
+<div class="table-responsive">
+    <table id="dataTable" class="table table-striped table-hover">
+        <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.User)
@@ -91,11 +110,12 @@
                 @Html.DisplayFor(modelItem => item.Doctor.FullNameDoctor)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdPolyclinic">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdPolyclinic">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdPolyclinic">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                        <a asp-action="Edit" asp-route-id="@item.IdPolyclinic"><i class="fas fa-edit"></i></a> |
+                        <a asp-action="Details" asp-route-id="@item.IdPolyclinic"><i class="fas fa-info"></i></a> |
+                        <a asp-action="Delete" asp-route-id="@item.IdPolyclinic"><i class="fas fa-trash"></i></a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
