--- a/Views/Analyzes/Delete.cshtml
+++ b/Views/Analyzes/Delete.cshtml
@@ -4,30 +4,29 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Удаление</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить?</h3>
 <div>
-    <h4>Analyze</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Departament)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Departament.IdDepartament)
+            @Html.DisplayFor(model => model.Departament.NameDepartament)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Organization)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Organization.IdOrganization)
+            @Html.DisplayFor(model => model.Organization.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Service)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Service.IdService)
+            @Html.DisplayFor(model => model.Service.NameService)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateAnalyzes)
@@ -39,19 +38,19 @@
             @Html.DisplayNameFor(model => model.Doctor)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Doctor.IdDoctor)
+            @Html.DisplayFor(model => model.Doctor.FullNameDoctor)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+            @Html.DisplayFor(model => model.User.FullName)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdAnalyzes" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
+        <a asp-action="Index">Вернуться назад</a>
     </form>
 </div>
