--- a/Views/Analyzes/Edit.cshtml
+++ b/Views/Analyzes/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Analyze</h4>
+<h1>Анализы</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -44,13 +42,14 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="PersonalAccount" asp-action="Index">Вернуться к списку</a>
+
 </div>
 
