--- a/Views/DisabilitySheets/Create.cshtml
+++ b/Views/DisabilitySheets/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>DisabilitySheet</h4>
+<h1>Создание</h1>
+<h4>Лист нетрудоспособности</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,11 +13,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="IdDoctor" class="control-label"></label>
-                <select asp-for="IdDoctor" class ="form-control" asp-items="ViewBag.IdDoctor"></select>
+                <select asp-for="IdDoctor" class="form-control" asp-items="ViewBag.IdDoctor"></select>
             </div>
             <div class="form-group">
                 <label asp-for="FromDate" class="control-label"></label>
@@ -32,11 +31,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdDepartament" class="control-label"></label>
-                <select asp-for="IdDepartament" class ="form-control" asp-items="ViewBag.IdDepartament"></select>
+                <select asp-for="IdDepartament" class="form-control" asp-items="ViewBag.IdDepartament"></select>
             </div>
             <div class="form-group">
                 <label asp-for="IdOrganization" class="control-label"></label>
-                <select asp-for="IdOrganization" class ="form-control" asp-items="ViewBag.IdOrganization"></select>
+                <select asp-for="IdOrganization" class="form-control" asp-items="ViewBag.IdOrganization"></select>
             </div>
             <div class="form-group">
                 <label asp-for="DateOfSinging" class="control-label"></label>
@@ -49,13 +48,11 @@
                 <span asp-validation-for="Reason" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
-
