--- a/Views/MedicalCars/Create.cshtml
+++ b/Views/MedicalCars/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Создать</h1>
 
-<h4>MedicalCar</h4>
+<h4>Скорая медицинская помощь</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -51,13 +51,13 @@
                 <select asp-for="IdDoctor" class ="form-control" asp-items="ViewBag.IdDoctor"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
