--- a/Views/Operations/Edit.cshtml
+++ b/Views/Operations/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Операция</h1>
 
-<h4>Operation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -74,13 +73,14 @@
                 <span asp-validation-for="IdDoctor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="PersonalAccount" asp-action="Index">Вернуться к списку</a>
+
 </div>
 
