--- a/Views/Recipes/Create.cshtml
+++ b/Views/Recipes/Create.cshtml
@@ -26,18 +26,29 @@
                 <label asp-for="UserId" class="control-label"></label>
                 <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="IdDoctor" class="control-label"></label>
                 <select asp-for="IdDoctor" class ="form-control" asp-items="ViewBag.IdDoctor"></select>
+            </div>*@
+           @* <div class="form-group">
+                <label asp-for="IdSignatureDoctor" class="control-label"></label>
+                <select asp-for="IdSignatureDoctor" class ="form-control" asp-items="ViewBag.IdSignatureDoctor"></select>
+            </div>*@
+            <div class="form-group">
+                <label asp-for="IdDoctor" class="control-label"></label>
+                <select asp-for="IdDoctor" class="form-control" asp-items="@ViewBag.IdDoctor">
+                    <option value="">--Выберите доктора--</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdSignatureDoctor" class="control-label"></label>
+                <input asp-for="IdSignatureDoctor" class="form-control" readonly />
+                <span asp-validation-for="IdSignatureDoctor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RecipeName" class="control-label"></label>
                 <input asp-for="RecipeName" class="form-control" />
                 <span asp-validation-for="RecipeName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdSignatureDoctor" class="control-label"></label>
-                <select asp-for="IdSignatureDoctor" class ="form-control" asp-items="ViewBag.IdSignatureDoctor"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
